# Syntacore_Test

./: Accumulation.cpp  Accumulation.h  CMakeLists.txt  input1.txt  main.cpp  output1.txt  test-main.cpp
